# mini

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/app/: main.py
backend/app/agents/: __init__.py  base_agent.py  coding_agent.py  coordinator.py  devops_agent.py  execution_state.py  git_agent.py  llm_provider.py  planner_agent.py  review_agent.py  testing_agent.py
backend/app/api/: agent.py  auth.py  context.py  execution.py  github.py  projects.py  terminal.py  tickets.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: audit.py  rate_limit.py
backend/app/models/: models.py
backend/app/tools/: base.py  devops_tools.py  execution_tools.py  file_tools.py  github_tools.py  registry.py  shell_tools.py  ticket_tools.py
backend/tests/: __init__.py  conftest.py  test_base_agent.py  test_file_tools.py  test_rate_limit.py  test_tools.py
db/migrations/: 001_initial.sql
docs/: PRD.md  TECHNICAL_SPEC.md
executor/: Dockerfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthModal.tsx  ChatPanel.tsx  ConfirmModal.tsx  ConversationPanel.tsx  EditorPane.tsx  ErrorBoundary.tsx  FileExplorer.tsx  GitHubModal.tsx  Header.tsx  NewProjectModal.tsx  ResizeHandle.tsx  Sidebar.tsx  TerminalPanel.tsx
frontend/src/lib/: api.ts  auth.tsx
infra/nginx/: nginx.conf
infra/nginx/conf.d/: default.conf
(+4 files in other folders)
