[project]
name = "mini-cursor"
version = "1.0.0"
description = "AI-native software engineering platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "httptools>=0.6.0",
    "python-multipart>=0.0.9",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "docker>=7.1.0",
    "cryptography>=42.0.0",
    "structlog>=24.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
